[package]
name = "serverless-cost-calculator"
version = "0.1.0"
edition = "2021"
authors = ["Xiaoguang Sun <sunxiaoguang@gmail.com>"]
license = "Apache-2.0"
description = "Estimate the cost of TiDB Serverless for your existing MySQL-compatible databases."
homepage = "https://github.com/sunxiaoguang/serverless-cost-calculator"
repository = "https://github.com/sunxiaoguang/serverless-cost-calculator"

[dependencies]
clap = "4.5.6"
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "tls-native-tls", "mysql", "time", "chrono"] }
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["full"] }
regex = "1.10.4"
chrono = "0.4.38"
colored = "2.1.0"
readable = "0.16.0"
prettytable-rs = "^0.10"
